2004-01-15  Jeff Breidenbach  <jab@debian.org>

	* doc/Makefile.am, doc/gnocatan-meta-server.6,
	debian/gnocatan-meta-server.files: Added metaserver manpage.
	
2004-01-11 0.8.1.14  Roland Clobus <rclobus@bigfoot.com>

	* client/callback.h, client/common/client.c, client/common/turn.c,
	client/gtk/callbacks.c: renamed callbacks.dice to
	callbacks.rolled_dice.
	* client/gtk/callbacks.c, client/gtk/frontend.h,
	client/gtk/interface.c: renamed frontend_dice to frontend_rolled_dice.
	* client/gtk/callbacks.c (frontend_init_game): added histogram_init.
	* client/gtk/guimap.c, client/gtk/guimap.h: add color lightblue.
	* client/gtk/histogram.c, client/gtk/histogram.h: complete rewrite of
	the histogram diagram. Now fully scalable.
	* client/common/resource.c (resource_format_num): support "no
	resources" situation.

2004-01-11 0.8.1.13  Bas Wijnen <b.wijnen@phys.rug.nl>
	* client/callback.h, client/common/client.c, client/gtk/callbacks.c,
	client/gtk/frontend.c, client/gtk/ftontend.h, client/gtk/trade.c:
	Fixes bug with maritime trade
	* client/common/callback.c, client/gtk/offline.c: Fix for unknown host
	bug
	* ai/client.c: AI can handle auto-discard
	* configure.in, client/Makefile.am, client/callback.h,
	client/common/callback.c, client/ai/Makefile.am, client/ai/ai.c,
	client/ai/ai.h, client/ai/greedy.c: Added first version of the AI in
	the new structure.
	
2004-01-02 0.8.1.12  Roland Clobus <rclobus@bigfoot.com>

	* client/callback.h (struct callbacks), client/common/client.c
	(mode_start, mode_load_game, mode_load_gameinfo, mode_start_response),
	client/common/client.h, client/common/player.c (player_reset,
	player_reset_statistic), client/gtk/callbacks.c (frontend_init_game,
	forntend_start_game), client/gtk/frontend.h, client/gtk/player.c
	(player_clear_summary): Fix bug #866431: Play several games with same
	client.
	* client/gtk/callbacks.c (frontend_start_game), client/gtk/frontend.h,
	client/gtk/identity.c (top level, draw_building_and_count,