@@ -23,7 +23,7 @@ AC_PREREQ(2.50)
 AC_CONFIG_SRCDIR([client])
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE([gnocatan], [0.8.1.14])
+AM_INIT_AUTOMAKE([gnocatan], [0.8.1.15])
 
 PROTOCOL_VERSION="\"0.8.0\""
 META_PROTOCOL_VERSION="\"1.0\""
